# portix

./: README.md  flutter_launcher_icons.yaml  flutter_rust_bridge.yaml  pubspec.yaml
.github/: dependabot.yml
.github/workflows/: build-desktop.yml  build_desktop.yml  release-native-libs.yml  security-scan.yml
.poolside/: settings.local.yaml
android/app/: build.gradle.kts
flatpak/: README-FLATPAK.md  com.github.Asepimam.Portix.desktop  com.github.Asepimam.Portix.metainfo.xml  com.github.Asepimam.Portix.yml  com.github.asep.Portix.desktop  com.github.asep.Portix.metainfo.xml  com.github.asepimam.Portix.metainfo.xml  com.github.asepimam.Portix.yml  flathub-com.github.asep.Portix.yml  flathub-com.github.asepimam.Portix.yml
flutter_app/: pubspec.yaml
flutter_app/linux/: CMakeLists.txt
flutter_app/test/: local_editor_service_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
portix_serv/: Cargo.toml
portix_serv/.github/: dependabot.yml
portix_serv/src/: lib.rs
portix_serv/src/application/: autocomplete_service.rs  session_manager.rs
portix_serv/src/domain/: errors.rs  events.rs  profile.rs
portix_serv/src/infrastructure/autocomplete/: cache.rs  command.rs  history.rs  option.rs  path.rs
snap/: snapcraft.yaml
snap/gui/: portix.desktop
src/: api.rs
test/: ctrl_input_handler_test.dart  rdp_canvas_test.dart  terminal_alt_buffer_test.dart  terminal_panel_workspace_integration_test.dart  terminal_selection_test.dart  terminal_session_ui_controller_test.dart  terminal_split_target_logic_test.dart  terminal_suggestion_controller_test.dart  terminal_suggestion_test.dart  terminal_workspace_drag_widget_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+201 files in other folders)
