[package]
name = "portix-serv"
version = "0.1.0"
edition = "2024"

[lib]
name = "portix_serv"
crate-type = ["cdylib", "staticlib", "rlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(frb_expand)"] }

[dependencies]
anyhow = "1"
base64 = "0.22"
flutter_rust_bridge = "=2.12.0"
once_cell = "1"
russh = { version = "0.61.2", features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"

# ─── Release profile: hardened for distribution ───────────────────────────────
# Goals:
#   • Smallest possible binary (no debug symbols leaked into release artifact)
#   • Aggressive inlining + dead-code elimination via LTO
#   • panic=abort removes unwinding tables (less reversible, smaller binary)
#   • opt-level=3 + codegen-units=1 for maximum optimisation & fewer symbols
[profile.release]
opt-level        = 3        # maximum speed optimisation
lto              = "fat"    # whole-program link-time optimisation
codegen-units    = 1        # single codegen unit → better inlining, fewer symbols
panic            = "abort"  # no unwinding machinery; removes stack-trace strings
strip            = "symbols" # strip ALL symbols from the final binary
overflow-checks  = false    # disable integer-overflow checks in release builds
debug            = false    # no debug info in release binary

# ─── Hardened release profile used only in CI security-build step ─────────────
# Identical to [release] but also strips debuginfo aggressively.
[profile.release-hardened]
inherits         = "release"
strip            = "debuginfo"

